--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -9,7 +9,11 @@
       </footer>
     </blockquote>
     <div class="created">
-      <%= time_ago_in_words(quote.created_at) %> ago
+      <% if quote.created_at %>
+        <p><%= time_ago_in_words(quote.created_at) %> ago</p>
+      <% else %>
+        <p></p>
+      <% end %>
     </div>
   </section>
 <% end %>
